Prevent continuing on as column from wrapping
To reduce vertical scrolling in route-details table.

--- a/WTA.Schedules/css/main.css
+++ b/WTA.Schedules/css/main.css
@@ -775,6 +775,9 @@ fieldset select{
 	border-top:6px solid rgba(0,174,239,.8);
 	border-radius:100%;
 }
+.continuing {
+    white-space:nowrap;
+}
 
 @-webkit-keyframes rotation {
 from {-webkit-transform: rotate(0deg);}
